--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "Ritesh Gharat",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
-    "socket.io": "^4.7.5"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "dotenv": "^16.4.5"
