--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
     "bcryptjs": "^2.4.3",
+    "catalyst-backend": "file:",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.3",
+    "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.7",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   },
